button destroying on module unload
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4137 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -62,6 +62,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêto nieu¿ywan± nigdzie funkcjê progress z klasy MessageBox (Vogel)
 * ³adniejsze okno MessageBox (Vogel)
 * kilka poprawek w MessageBox i w window_notify (Vogel)
+* modu³ encryption przy wy³adowaniu usuwa przycisk szyfrowania z okna Chat (Prezu/neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
