hiding offline fix
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4144 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -66,6 +66,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * uruchomienie Kadu z parametrem numer, gg:numer, gg:/numer, gg://numer, itd.
   spowoduje otwarcie okna rozmowy ze wskazanym numerem, TAK¯E gdy Kadu jest
   ju¿ uruchomione (joi)
+* przy ukrywaniu niedostêpnych, konkakty z samym numerem telefonu s± pokazywane (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
