workaround for kwin: make chat window active when it is minimized and user double clicked on userbox
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4146 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -68,6 +68,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   ju¿ uruchomione (joi)
 * przy ukrywaniu niedostêpnych, konkakty z samym numerem telefonu s± pokazywane (neeo)
 * zmiana nazwy wewnêtrznego katalogu kadu na kadu-core (joi)
+* przy podwójnym klikniêciu na li¶cie kontaktów, przywrócenie focusu oknu rozmowy,
+  gdy jest ono zminimalizowane (joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
