fix segfault ; anti-segfault check
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4149 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -70,6 +70,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zmiana nazwy wewnêtrznego katalogu kadu na kadu-core (joi)
 * przy podwójnym klikniêciu na li¶cie kontaktów, przywrócenie focusu oknu rozmowy,
   gdy jest ono zminimalizowane (joi)
+* poprawka wywrotki przy dodawaniu akcji "zatrzymania wyszukiwania w katalogu" (joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
