--- a/ChangeLog
+++ b/ChangeLog
@@ -71,6 +71,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przy podwójnym klikniêciu na li¶cie kontaktów, przywrócenie focusu oknu rozmowy,
   gdy jest ono zminimalizowane (joi)
 * poprawka wywrotki przy dodawaniu akcji "zatrzymania wyszukiwania w katalogu" (joi)
+* optymalizacja od¶wie¿ania listy kontaktów przy zmianie rozmiarów okna (joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
