offline class added; hide offline fix
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4154 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -72,6 +72,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   gdy jest ono zminimalizowane (joi)
 * poprawka wywrotki przy dodawaniu akcji "zatrzymania wyszukiwania w katalogu" (joi)
 * optymalizacja od¶wie¿ania listy kontaktów przy zmianie rozmiarów okna (joi)
+* ukrywanie niedostêpnych uniezale¿nione od u¿ywanych protoko³ów (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
