configuration for clearing chat
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4159 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -78,6 +78,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   mrugniêcia listy kontaktów (joi)
 * prawid³owe pozycjonowanie animowanych emotikon/obrazków w przypadku
   przesuwania poziomego scrollbara (joi)
+* dodana opcja w konfiguracji (na poziomie zaawansowanym), umo¿liwiaj±ca wy³±czenie
+  potwierdzania czyszczenia okna Chat (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
