definicja zakladki historii w konfiguracji przeniesiona do modulu history
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4165 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -84,6 +84,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dialog historii przeniesiony do modu³u "history" (adrian)
 * nowy sygna³ emitowany po obs³u¿eniu przychodz±cej wiadomo¶ci (uzi18/neeo)
 * dialog wyszukiwania w historii przeniesiony do modu³u "history" (adrian)
+* definicja zak³adki historii w konfiguracji przeniesiona do modu³u "history" (adrian)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
