save loaded (by wizard) sound module
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4167 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -86,6 +86,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dialog wyszukiwania w historii przeniesiony do modu³u "history" (adrian)
 * definicja zak³adki historii w konfiguracji przeniesiona do modu³u "history" (adrian)
 * cytowanie wiadomo¶ci w oknie rozmowy przeniesione do modu³u "history" (adrian)
+* poprawka zapisywania modu³u d¼wiêkowego wybranego z poziomu wizarda (Dorregaray/joi)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
