proper focus when on wheel event
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4168 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -87,6 +87,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * definicja zak³adki historii w konfiguracji przeniesiona do modu³u "history" (adrian)
 * cytowanie wiadomo¶ci w oknie rozmowy przeniesione do modu³u "history" (adrian)
 * poprawka zapisywania modu³u d¼wiêkowego wybranego z poziomu wizarda (Dorregaray/joi)
+* u¿ycie rolki myszy w oknie rozmowy nie powoduje przeniesienia focusu z pola edycji (Arvenil/neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
