new signals in chatManager class
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4174 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -91,6 +91,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * opcje menu kontekstowego oraz obs³uga skrótów zwi±zanych z histori± przeniesione
   do modu³u "history" (adrian)
 * tytu³ okna Chat pokazuje liczbê oczekuj±cych wiadomo¶ci (micha³,neeo)
+* nowe sygna³y w chat_manager: chatCreated(Chat *), chatCreated(Chat *, time_t), chatDestroying(Chat *),
+  chatDestroyed(Chat *) i ich wykorzystanie tam, gdzie jest to przydatne (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
