--- a/ChangeLog
+++ b/ChangeLog
@@ -93,6 +93,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * tytu³ okna Chat pokazuje liczbê oczekuj±cych wiadomo¶ci (micha³,neeo)
 * nowe sygna³y w chat_manager: chatCreated(Chat *), chatCreated(Chat *, time_t), chatDestroying(Chat *),
   chatDestroyed(Chat *) i ich wykorzystanie tam, gdzie jest to przydatne (Vogel)
+* usunieto przestarza³e sygna³y w chat_manager: chatCreated(const UsetGroup), chatCreated(const UsetGroup, time_t),
+  chatDestroying(const UserGroup) i wszystkie chatDestroyed()
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
