--- a/ChangeLog
+++ b/ChangeLog
@@ -94,9 +94,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowe sygna³y w chat_manager: chatCreated(Chat *), chatCreated(Chat *, time_t), chatDestroying(Chat *),
   chatDestroyed(Chat *) i ich wykorzystanie tam, gdzie jest to przydatne (Vogel)
 * usunieto przestarza³e sygna³y w chat_manager: chatCreated(const UserGroup), chatCreated(const UsetGroup, time_t),
-  chatDestroying(const UserGroup) i wszystkie chatDestroyed()
+  chatDestroying(const UserGroup) i wszystkie chatDestroyed() (Vogel)
 * sygna³y w chat_manager: chatOpen(UserListElements) -> chatOpen(Chat *), dodano sygna³
-  Chat::messageReceived(Chat *)
+  Chat::messageReceived(Chat *) (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
