changed status-change method added StatusChanger class, status_manager removed gadu->status() changes added gadu->writeableStatus() changes (only for Kadu class) added kadu->setOnline() and others methods
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4178 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -97,6 +97,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   chatDestroying(const UserGroup) i wszystkie chatDestroyed() (Vogel)
 * sygna³y w chat_manager: chatOpen(UserListElements) -> chatOpen(Chat *), dodano sygna³
   Chat::messageReceived(Chat *) (Vogel)
+* zmiana sposobu modyfikacji statusu, klasa StatusChanger, zablokowanie mo¿liwo¶ci
+  zmiany poprzez gadu->status(), dodano kadu->setOnline() i podobne
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
