--- a/ChangeLog
+++ b/ChangeLog
@@ -98,7 +98,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * sygna³y w chat_manager: chatOpen(UserListElements) -> chatOpen(Chat *), dodano sygna³
   Chat::messageReceived(Chat *) (Vogel)
 * zmiana sposobu modyfikacji statusu, klasa StatusChanger, zablokowanie mo¿liwo¶ci
-  zmiany poprzez gadu->status(), dodano kadu->setOnline() i podobne
+  zmiany poprzez gadu->status(), dodano kadu->setOnline() i podobne (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
