opcjonalne usuwanie historii podczas usuwania kontaktu przeniesione do modulu history
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4184 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -101,6 +101,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   zmiany poprzez gadu->status(), dodano kadu->setOnline() i podobne (Vogel)
 * kosmetyka w hints (Vogel)
 * kosmetyka w sound (Vogel)
+* opcjonalne usuwanie historii podczas usuwania kontaktu przeniesione do modu³u "history" (adrian)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
