dodano możliwość sortowania UserListElements (operator <)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4189 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -105,6 +105,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * usuniêto nieu¿ywane i nieaktualne pending_events.cpp/h (adrian)
 * dodano metody pixmapName() w klasie Status
 * dodano metodê removeVariable(const QString &group, const QString &name) w klasie ConfigFile
+* dodano mo¿liwo¶æ sortowania UserListElements (operator <)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
