parametry UserListElements -> const UserListElements & w klasie Chat i ChatManager (Vogel) sygnały chatActivated(Chat *) w Chat i ChatManager, usunięto sygnał Chat::windowActivationChanged()
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4190 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -103,9 +103,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * kosmetyka w sound (Vogel)
 * opcjonalne usuwanie historii podczas usuwania kontaktu przeniesione do modu³u "history" (adrian)
 * usuniêto nieu¿ywane i nieaktualne pending_events.cpp/h (adrian)
-* dodano metody pixmapName() w klasie Status
-* dodano metodê removeVariable(const QString &group, const QString &name) w klasie ConfigFile
-* dodano mo¿liwo¶æ sortowania UserListElements (operator <)
+* dodano metody pixmapName() w klasie Status (Vogel)
+* dodano metodê removeVariable(const QString &group, const QString &name) w klasie ConfigFile (Vogel)
+* dodano mo¿liwo¶æ sortowania UserListElements (operator <) (Vogel)
+* parametry UserListElements -> const UserListElements & w klasie Chat i ChatManager (Vogel)
+* sygna³y chatActivated(Chat *) w Chat i ChatManager, usuniêto sygna³ Chat::windowActivationChanged()
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
