zmiana nazw notyfikacji w module dcc (Vogel)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4192 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -109,6 +109,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * parametry UserListElements -> const UserListElements & w klasie Chat i ChatManager (Vogel)
 * sygna³y chatActivated(Chat *) w Chat i ChatManager, usuniêto sygna³ Chat::windowActivationChanged() (Vogel)
 * VRadioBox -> ComboBox w wyborze typu dymka w konfiguracji notify (Vogel)
+* zmiana nazw notyfikacji w module dcc (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
