hints: usunięto podział na zmianę statusu w zależności od istnienia opisu (Vogel)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4194 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -111,6 +111,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * VRadioBox -> ComboBox w wyborze typu dymka w konfiguracji notify (Vogel)
 * zmiana nazw notyfikacji w module dcc (Vogel)
 * pliki history.cpp/h przeniesiono do modu³u "history" - zakoñczono wydzielanie (adrian)
+* hints: usuniêto podzia³ na zmianê statusu w zale¿no¶ci od istnienia opisu (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
