notify: usunięto nadmierny sygnał StatusChanged (zastąpiony przez 4 inne) (Vogel)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4195 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -112,6 +112,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zmiana nazw notyfikacji w module dcc (Vogel)
 * pliki history.cpp/h przeniesiono do modu³u "history" - zakoñczono wydzielanie (adrian)
 * hints: usuniêto podzia³ na zmianê statusu w zale¿no¶ci od istnienia opisu (Vogel)
+* notify: usuniêto nadmierny sygna³ StatusChanged (zast±piony przez 4 inne) (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
