--- a/ChangeLog
+++ b/ChangeLog
@@ -114,6 +114,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * hints: usuniêto podzia³ na zmianê statusu w zale¿no¶ci od istnienia opisu (Vogel)
 * notify: usuniêto nadmierny sygna³ StatusChanged (zast±piony przez 4 inne) (Vogel)
 * config_dialog: mo¿liwo¶æ dynamicznej modyfikacji zawarto¶ci kontrolek ComboBox (Vogel)
+* notify: wyrzucenie ShowUserBoxTooltip poza modu³ notify, konfiguracja przeniesiona do zak³adki 'Wygl±d' (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
