--- a/ChangeLog
+++ b/ChangeLog
@@ -115,6 +115,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * notify: usuniêto nadmierny sygna³ StatusChanged (zast±piony przez 4 inne) (Vogel)
 * config_dialog: mo¿liwo¶æ dynamicznej modyfikacji zawarto¶ci kontrolek ComboBox (Vogel)
 * notify: wyrzucenie ShowUserBoxTooltip poza modu³ notify, konfiguracja przeniesiona do zak³adki 'Wygl±d' (Vogel)
+* encryption: poprawiono b³±d [0000586] - mo¿liwo¶æ wys³ania klucza do kilku kontaktów naraz (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
