--- a/ChangeLog
+++ b/ChangeLog
@@ -116,6 +116,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * config_dialog: mo¿liwo¶æ dynamicznej modyfikacji zawarto¶ci kontrolek ComboBox (Vogel)
 * notify: wyrzucenie ShowUserBoxTooltip poza modu³ notify, konfiguracja przeniesiona do zak³adki 'Wygl±d' (Vogel)
 * encryption: poprawiono b³±d [0000586] - mo¿liwo¶æ wys³ania klucza do kilku kontaktów naraz (Vogel)
+* core: poprawiono b³±d [0000518] - przeci±ganie kontaktu z "Wszyscy" do innej grupy blokuje opcjê "Przesuñ do grupy" (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
