klasa KaduParser stworzona z przestrzeni nazw KaduParser
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4200 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -117,6 +117,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * notify: wyrzucenie ShowUserBoxTooltip poza modu³ notify, konfiguracja przeniesiona do zak³adki 'Wygl±d' (Vogel)
 * encryption: poprawiono b³±d [0000586] - mo¿liwo¶æ wys³ania klucza do kilku kontaktów naraz (Vogel)
 * core: poprawiono b³±d [0000518] - przeci±ganie kontaktu z "Wszyscy" do innej grupy blokuje opcjê "Przesuñ do grupy" (Vogel)
+* klasa KaduParser stworzona z przestrzeni nazw KaduParser
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
