--- a/ChangeLog
+++ b/ChangeLog
@@ -126,6 +126,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * kompilacja Kadu: poprawka po ostatnich zmianach, kompilacja z --enable-final znowu dzia³a (White Eagle/neeo)
 * migration: po udanej migracji, modu³ przestaje byæ ³adowany (uzi18,neeo)
 * potwierdzanie nadpisania pliku wybranego przy eksporcie listy kontaktów (neeo)
+* message_box: poprawiono tworzenie okna, nie ma b³êdów Qt (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
