--- a/ChangeLog
+++ b/ChangeLog
@@ -128,6 +128,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * potwierdzanie nadpisania pliku wybranego przy eksporcie listy kontaktów (neeo)
 * message_box: poprawiono tworzenie okna, nie ma b³êdów Qt (Vogel)
 * notyfikacje "Zmiana statusu na..." zamieniona w klasê pochodn± od Notification (Vogel)
+* notyfikacje "Nowa wiadomo¶æ/rozmowa" zamienione w klasy pochodne od Notification, grupowanie wiadomo¶ci w dymkach (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
