--- a/ChangeLog
+++ b/ChangeLog
@@ -132,6 +132,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * porz±dki po ostatnich zmianach w notyfikacjach, czê¶æ pierwsza (Vogel)
 * config_wizard: porz±dki po ostatnich zmianach w notyfikacjach, czê¶æ druga (Vogel)
 * hints: porz±dki po ostatnich zmianach w notyfikacjach, czê¶æ trzecia (Vogel)
+* sound: porz±dki po ostatnich zmianach w notyfikacjach, czê¶æ czwarta (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
