porządki po ostatnich zmianach w notyfikacjach, część piąta, domyślne wartości
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4219 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -134,6 +134,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * hints: porz±dki po ostatnich zmianach w notyfikacjach, czê¶æ trzecia (Vogel)
 * sound: porz±dki po ostatnich zmianach w notyfikacjach, czê¶æ czwarta (Vogel)
 * hints: lepsza kontrolka do ustawiania czasu znikania (Vogel)
+* porz±dki po ostatnich zmianach w notyfikacjach, czê¶æ pi±ta, domy¶lne warto¶ci (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
