userbox popup tweaks
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4222 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -136,6 +136,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * hints: lepsza kontrolka do ustawiania czasu znikania (Vogel)
 * porz±dki po ostatnich zmianach w notyfikacjach, czê¶æ pi±ta, domy¶lne warto¶ci (Vogel)
 * przesuniêcie opcji 'informuj o nowej wiadomo¶ci tylko gdy okno nieaktywne' z sound do notify (Vogel)
+* niepotrzebne opcje w popupie na li¶cie kontaktów s± ukrywane, a nie blokowane (neeo)
+* ma³a reorganizacja popupu: "Poka¿/zmieñ informacje o kontakcie" wróci³o do g³ównego menu (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
