dcc: poprawki konsultowane z drużyną libgadu, nie powinno być już problemów z transferami kadu - kadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4236 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -146,6 +146,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dcc: drobna poprawka, dzia³a nieco lepiej (Vogel)
 * poprawiono b³±d [0000617]: blokowanie mo¿liwo¶ci otwarcia okna rozmowy z samym sob± (Vogel)
 * notify: poprawiono mo¿liw± wywrotkê przy dwukrotnym zamykaniu tej samej notyfikacji (Vogel)
+* dcc: poprawki konsultowane z dru¿yn± libgadu, nie powinno byæ ju¿ problemów z transferami kadu - kadu (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
