--- a/AUTHORS
+++ b/AUTHORS
@@ -11,20 +11,20 @@ programista, koordynator
 Roman Krzystyniak <Ron_K (at) tlen (dot) pl>
 dokumentacja projektu, opiekun t³umaczeñ
 
-Marcin ¦lusarz <joi (at) kadu (dot) net>
-programista
-
 Dawid Stawiarski <neeo (at) kadu (dot) net>
 programista
 
 Rafa³ Malinowski <vogel (at) kadu (dot) net>
 programista
 
- Ludzie którzy nie wspieraj± ju¿ aktywnie projektu:
+ Ludzie, którzy nie wspieraj± ju¿ aktywnie projektu:
 ============================================================
 
 Tomasz Jarzynka <tomee (at) cpi (dot) pl>
 twórca projektu, programista, grafik
+
+Marcin ¦lusarz <joi (at) kadu (dot) net>
+programista
 
 Dariusz Jagodzik <mast3r (at) kadu (dot) net>
 programista
