--- a/ChangeLog
+++ b/ChangeLog
@@ -152,6 +152,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dcc: mo¿liwo¶æ wys³ania kilku plików na raz z menu (Vogel)
 * dcc: drobne optymalizacje (neeo)
 * wersja GG: prezentowana w oknie infromacji o kontakcie, oraz dostêpna przez parser (neeo)
+* dodano ikony do kilku pozycji w popupie na li¶cie kontaktów (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
