--- a/ChangeLog
+++ b/ChangeLog
@@ -153,6 +153,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dcc: drobne optymalizacje (neeo)
 * wersja GG: prezentowana w oknie infromacji o kontakcie, oraz dostêpna przez parser (neeo)
 * dodano ikony do kilku pozycji w popupie na li¶cie kontaktów (neeo)
+* akcja dodaj±ca kontakt wype³nia mo¿liwe pola przy dodawania anonimów (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
