segfault przy wyciagnietym toolbarze
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4248 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -153,7 +153,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dcc: drobne optymalizacje (neeo)
 * wersja GG: prezentowana w oknie infromacji o kontakcie, oraz dostêpna przez parser (neeo)
 * dodano ikony do kilku pozycji w popupie na li¶cie kontaktów (neeo)
-* akcja dodaj±ca kontakt wype³nia mo¿liwe pola przy dodawania anonimów (neeo)
+* akcja dodaj±ca kontakt wype³nia mo¿liwe pola przy dodawaniu anonimów (neeo)
+* poprawiono segfault w oknie chat przy wyci±gniêtej akcji wysy³ania wiadomo¶ci (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
