--- a/ChangeLog
+++ b/ChangeLog
@@ -157,6 +157,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiono segfault w oknie chat przy wyci±gniêtej akcji wysy³ania wiadomo¶ci (neeo)
 * drobna optymalizacja otwierania odno¶nika z opisu kontaktu (neeo)
 * skrót klawiszowy usuwaj±cy kontakty nie zadzia³a, gdy ¿aden kontakt nie zosta³ wybrany (neeo)
+* mo¿liwo¶æ zdefiniowania klienta pocztowego, do obs³ugi adresów email (neeo)
+* drobne optymalizacje przy wyborze przegl±darki i wyszukiwaniu URLi (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
