--- a/ChangeLog
+++ b/ChangeLog
@@ -160,6 +160,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * mo¿liwo¶æ zdefiniowania klienta pocztowego, do obs³ugi adresów email (neeo)
 * drobne optymalizacje przy wyborze przegl±darki i wyszukiwaniu URLi (neeo)
 * system budowania zaktualizowany do autotools 1.9 z 1.7 (Vogel)
+* zmienna 'q' do wykorzystania w parserze: nazwa ikonki statusu kontaktu (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
