poprawki przy zmianie zestawu ikon
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4256 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -161,6 +161,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * drobne optymalizacje przy wyborze przegl±darki i wyszukiwaniu URLi (neeo)
 * system budowania zaktualizowany do autotools 1.9 z 1.7 (Vogel)
 * zmienna 'q' do wykorzystania w parserze: nazwa ikonki statusu kontaktu (Vogel)
+* drobne poprawki przy zmianie zestawu ikon (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
