--- a/ChangeLog
+++ b/ChangeLog
@@ -164,6 +164,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * drobne poprawki przy zmianie zestawu ikon (neeo)
 * grupy s± kasowane zaraz po usuniêciu z nich ostatniego u¿ytkownika (neeo)
 * nowe okno konfiguracji - wstêp (Vogel)
+* poprawiono b³±d przy zerwaniu po³±czenia przez serwer (neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
