nowe okno konfiguracji: poprawiona zmiana składni panelu informacyjnego
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4263 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -165,6 +165,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * grupy s± kasowane zaraz po usuniêciu z nich ostatniego u¿ytkownika (neeo)
 * nowe okno konfiguracji - wstêp (Vogel)
 * poprawiono b³±d przy zerwaniu po³±czenia przez serwer (neeo)
+* nowe okno konfiguracji: poprawiona zmiana sk³adni panelu informacyjnego (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
