--- a/ChangeLog
+++ b/ChangeLog
@@ -166,6 +166,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowe okno konfiguracji - wstêp (Vogel)
 * poprawiono b³±d przy zerwaniu po³±czenia przez serwer (neeo)
 * nowe okno konfiguracji: poprawiona zmiana sk³adni panelu informacyjnego (Vogel)
+* nowy predefiniowany klient pocztowy (Evolution) oraz poprawka wykrywania
+  Thunderbirda na Debianie i pochodnych (White Eagle,neeo)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
