nowe okno konfiguracji: pełna edycja sładni panelu informacyjnego
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4272 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -168,6 +168,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nowe okno konfiguracji: poprawiona zmiana sk³adni panelu informacyjnego (Vogel)
 * nowy predefiniowany klient pocztowy (Evolution) oraz poprawka wykrywania
   Thunderbirda na Debianie i pochodnych (White Eagle,neeo)
+* nowe okno konfiguracji: pe³na edycja s³adni panelu informacyjnego (Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
