ujednolicone Protocol::sendMessage
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@4275 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -167,8 +167,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawiono b³±d przy zerwaniu po³±czenia przez serwer (neeo)
 * nowe okno konfiguracji: poprawiona zmiana sk³adni panelu informacyjnego (Vogel)
 * nowy predefiniowany klient pocztowy (Evolution) oraz poprawka wykrywania
-  Thunderbirda na Debianie i pochodnych (White Eagle,neeo)
+  Thunderbirda na Debianie i pochodnych (White Eagle/neeo)
 * nowe okno konfiguracji: pe³na edycja s³adni panelu informacyjnego (Vogel)
+* ujednolicone Protocol::sendMessage (Juzef/Vogel)
 
 +++ wersja 0.5.0 (01.01.2007)
 * usuniêty niewielki wyciek pamiêci przy nieudanej próbie za³adowania modu³u (joi)
